--- a/src/components/HomeComponents/Navigation/Navigation.css
+++ b/src/components/HomeComponents/Navigation/Navigation.css
@@ -28,7 +28,6 @@
 }
 
 .Navigation-menu__item-link {
-    color: white;
     border: none;
     outline: none;
     background-color: Transparent;
