--- a/src/components/HomeComponents/ProductPricing/ProductPricing.css
+++ b/src/components/HomeComponents/ProductPricing/ProductPricing.css
@@ -199,7 +199,7 @@
     align-items: center;
     margin: 0;
     text-align: center;
-    font-weight: SemiBold;
+    font-weight: bold;
     font-size: 16px;
     font-family: Montserrat;
     letter-spacing: 1.2px;
